[package]
name = "ccanvas-bindings"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies.ccanvas-packet-build]
# path = "../ccanvas-packet-build"
git = "https://github.com/ccanvas/ccanvas-packet-build"
rev = "f4ce106"

[features]
default = []
debug = []

# inject.packet-features.begin
connection = []
# inject.packet-features.end
